Introduce BookRecommendationControllerTest